# AdventOfCode

2021/prolog/: 0.pl
2021/prolog/1/part1/: main.pl
2021/prolog/1/part2/: main.pl
2021/prolog/2/part1/: main.pl
2021/prolog/2/part2/: main.pl
2023/C++/0/part1/src/: main.cpp
2023/C++/1/part1/: Makefile
2023/C++/1/part1/src/: main.cpp
2023/C++/1/part2/: Makefile
2023/C++/1/part2/src/: main.cpp
2023/C++/2/part2/: Makefile
2023/C++/2/part2/src/: main.cpp
2023/C++/3/part1/src/: main.cpp
2023/C++/3/part2/src/: main.cpp
2023/C++/4/part1/src/: main.cpp
2023/C++/4/part2/src/: main.cpp
2024/Haskell/: .gitignore  0.hs
2024/Haskell/1/part1/app/: Main.hs
2024/Haskell/1/part2/app/: Main.hs
2024/Haskell/10/part1/src/: Main.hs  Parser.hs
2024/Haskell/10/part2/src/: Main.hs
2024/Haskell/11/part1/: x1.cabal
2024/Haskell/11/part1/src/: Main.hs
2024/Haskell/11/part2/src/: Main.hs  Parser.hs
2024/Haskell/12/part1/src/: Main.hs
2024/Haskell/12/part2/src/: Main.hs
2024/Haskell/2/part1/: x1.cabal
2024/Haskell/2/part1/app/: Main.hs
2024/Haskell/2/part2/app/: Main.hs
2024/Haskell/3/part1/: x1.cabal
2024/Haskell/3/part1/src/: Main.hs  Parser.hs
2024/Haskell/3/part2/src/: Main.hs  Parser.hs
2024/Haskell/4/part1/src/: Main.hs
2024/Haskell/4/part2/src/: Main.hs
2024/Haskell/5/part1/src/: Main.hs  Parser.hs
2024/Haskell/5/part2/src/: Main.hs
2024/Haskell/6/part1/: hie.yaml
2024/Haskell/7/part2/: x1.cabal
2024/Haskell/7/part2/src/: Main.hs
2024/Haskell/8/part2/: x1.cabal
2024/Haskell/9/part2/: x1.cabal
(+7 files in other folders)
