cabal-version:      2.4
name:               x1
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Absobel
maintainer:         imkonnu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable x1
    main-is:          Main.hs
    other-modules: Parser
    default-extensions: TupleSections, LambdaCase
    build-depends:    base ^>=4.16.4.0, extra
    hs-source-dirs:   src
    default-language: Haskell2010
